fixed nav dropdown not showing up over spot cards by adding z index to nav, set modal zindexes to 999, removed position fixed on body with modal open cuz it was causing weird bug

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,10 +7,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 #modal-background {
   position: fixed;
+  z-index: 999;
   top: 0;
   right: 0;
   left: 0;
@@ -20,6 +22,7 @@
 
 #modal-content {
   /* width: 29.583vw; */
+  z-index: 999;
   border-radius: 12px;
   position: absolute;
   background-color: white;
